style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=ADLaM+Display&display=swap');
@font-face {
    font-family: "Grundschrift";
    src: url('fonts/grundschrift-beta.ttf') format('truetype');
}

.navItems li .current {
    color: black;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Grundschrift', sans-serif;
}

html {
    scroll-behavior: smooth;
}

body {
    background-color: #c0c5b8;
    font-family: 'Grundschrift', sans-serif;
}

body::-webkit-scrollbar {
    display: none;
}

/*body::-webkit-scrollbar {
    width: 20px;
}

body::-webkit-scrollbar-track {
    background-color: #c0c5b8;
}

body::-webkit-scrollbar-thumb {
    background-color: #727272;
    border-radius: 20px;
    border: 6px solid transparent;
    background-clip: content-box;
}

body::-webkit-scrollbar-thumb:hover {
    background-color: #929292;
}*/

nav {
    left: 10px;
    display: flex;
    width: 100%;
    justify-content: space-around;
    height: 80px;
    line-height: 80px;
    background-color: #4d5c4b;
}

.logo {
    display: flex;
    font-size: 40px;
    font-weight: 800;
    color: #e8eae5;
    letter-spacing: 3px;
    cursor: pointer;
    text-transform: uppercase;
} 

.navItems {
    display: flex;
}

.navItems li {
    list-style: none;
    margin: 0 15px;
}

.navItems li a {
    font-size: 25px;
    color: #e8eae5;
    letter-spacing: 3px;
    text-decoration: none;
    text-transform: capitalize;
    transition: all .3s;
    width: 100%;
    padding: 10px;
}

.links {
    display: flex;
}

.links a {
    font-size: 30px;
    color: #e8eae5;
    margin-right: 25px;
    transition: all .3s;
}

.links a:hover {
    color: #000000;
    transition: color 0.3s;
}

.navItems li:hover a {
    color: #000000;
    text-shadow: 0px 0px 10px #000000;
    transition: all 0.3s;
}

._1stsec {
    background-color: #c0c5b8;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 91.2vh;
    gap: 555px;
    margin-left: 0%;
}

.logopic {
    margin-top: 100px;
    position: fixed;
    top: 0;
    right: -0%;
    transition: all .1s linear;
}

._2ndsec {
    height: 96vh;
    background-image: url(layered-waves-haikei\ \(2\).svg);
}

.wave {
    transform: scale(300%);
}

._1sttext {
    width: 75%;
    margin: 2%;
    font-size: 200%;
    color: #000000;
}

b {
    font-size: 300%;
}

#myBtn {
    display: none; /* Hidden by default */
    position: fixed; /* Fixed/sticky position */
    bottom: 20px; /* Place the button at the bottom of the page */
    right: 30px; /* Place the button 30px from the right */
    z-index: 99; /* Make sure it does not overlap */
    border: none; /* Remove borders */
    outline: none; /* Remove outline */
    background-color: #7d957e; /* Set a background color */
    color: #e8eae5; /* Text color */
    cursor: pointer; /* Add a mouse pointer on hover */
    padding: 15px; /* Some padding */
    border-radius: 10px; /* Rounded corners */
    font-size: 18px; /* Increase font size */
    aspect-ratio: 1/1;
}

.fa-arrow-up {
    font-size: 50px;
}

#myBtn:hover {
    background-color: #758a76; /* Add a dark-grey background on hover */
}

#myBtn:hover i {
    transform: translateY(-4px);
}

#myBtn i {
    transition: all .2s ease-out;
}

#clock {
    position: fixed; 
    bottom: 20px;
    left: 30px;
    color: #000000;
    font-size: 50px;
    z-index: 999;
}

.hamburger {
    display: none;
}

.close {
    display: none;
}

@media screen and (max-width: 768px) {
    nav {
        display: flex;
        flex-direction: column;
        height: 100%;
        width: 100%;
        transition: all .5s linear
    }

    .hamburger {
        display: flex;
        margin-left: 15vw;
        cursor: pointer;
    }

    .hamburger input {
        display: none;
    }

    .hamburger svg {
        /* The size of the SVG defines the overall size */
        height: 3em;
        /* Define the transition for transforming the SVG */
        transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
    }

    .line {
        fill: none;
        stroke: white;
        stroke-linecap: round;
        stroke-linejoin: round;
        stroke-width: 3;
        /* Define the transition for transforming the Stroke */
        transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
            stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
    }

    .line-top-bottom {
        stroke-dasharray: 12 63;
    }

    .hamburger input:checked + svg {
        transform: rotate(-45deg);
    }

    .hamburger input:checked + svg .line-top-bottom {
        stroke-dasharray: 20 300;
        stroke-dashoffset: -32.42;
    }

    ._2ndsec {
        background-image: none;
        background-color: #c0c5b8;
        margin-bottom: 50px;
    }

    .logo {
        display: flex;
        justify-content: center;
        margin-left: 30vw;
    }

    .navItems {
        display: flex;
        justify-content: center;
        flex-direction: column;
        align-items: center;
        animation: showMenu .4s ease forwards;
        transition: all .4s ease;
        height: 0;
        visibility: hidden;
        opacity: 0;
    }

    .links {
        animation: showMenu .4s ease forwards;
        transition: all .4s ease;
        margin-left: -25px;
        align-items: center;
        justify-content: center;
        height: 0;
        visibility: hidden;
        opacity: 0;
        display: block;
        text-align: center;
    }

    .fa-bars {
        display: flex;
        margin-left: 80px;
        cursor: pointer;
        color: #e8eae5;
        font-size: 45px;
        margin-top: 5px;
    }

    .close {
        display: flex;
        align-items: center;
        margin-bottom: 5px;
    }

    .fa-brands {
        margin-left: 45px;
        margin-right: 25px;
    }

    .top-part {
        display: flex;
        align-items: center;
        justify-content: center;
    }

    .top {
        display: flex;
        justify-content: center;
    }

    .bottom {
        display: flex;
        justify-content: center;
        margin-top: -75px;
    }

    .wave {
        transform: scale(150%);
    }

    #clock {
        display: none;
    }

    ._1sttext {
        width: 92%;
        margin-left: 5%;
        margin-right: 5%;
        font-size: 25px;
        margin-bottom: 50px;
    }

    b {
        font-size: 100px;
    }
}

@media screen and (max-width: 430px) and (min-width: 428px) {
    .hamburger {
        margin-left: 22.5vw;
    }

    .links {
        text-align: center;
    }

    .logo {
        margin-left: 35vw;
    }
}

/* /* @media screen and (min-width: 481px) and (max-width: 768px) { 
    tablet 

    #clock {
        display: none;
    }

    nav {
        display: flex;
        flex-direction: column;
        height: 100%;
        width: 100%;
    }

    .hamburger {
        display: flex;
        margin-left: 33vw;
        cursor: pointer;
    }

    .hamburger input {
        display: none;
    }

    .hamburger svg {
        The size of the SVG defines the overall size
        height: 3em;
        Define the transition for transforming the SVG
        transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
    }

    .line {
        fill: none;
        stroke: white;
        stroke-linecap: round;
        stroke-linejoin: round;
        stroke-width: 3;
        Define the transition for transforming the Stroke
        transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
                    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
    }

    .line-top-bottom {
        stroke-dasharray: 12 63;
    }

    .hamburger input:checked + svg {
        transform: rotate(-45deg);
    }

    .hamburger input:checked + svg .line-top-bottom {
        stroke-dasharray: 20 300;
        stroke-dashoffset: -32.42;
    }

    .logo {
        display: flex;
        justify-content: center;
        margin-left: 40vw;
        font-size: 7vw;
    }

    .navItems {
        display: flex;
        justify-content: center;
        flex-direction: column;
        align-items: center;
        animation: showMenu .4s ease forwards;
        transition: all .4s ease;
        height: 0;
        visibility: hidden;
        opacity: 0;
    }

    .navItems li a {
        font-size: 5vw;
    }

    .links {
        animation: showMenu .4s ease forwards;
        transition: all .4s ease;
        margin-left: -25px;
        align-items: center;
        justify-content: center;
        height: 0;
        visibility: hidden;
        opacity: 0;
        display: block;
        text-align: center;
    }

    .links a i {
        font-size: 5vw;
    }

    .fa-bars {
        display: flex;
        margin-left: 80px;
        cursor: pointer;
        color: #e8eae5;
        font-size: 45px;
        margin-top: 5px;
    }

    .close {
        display: flex;
        align-items: center;
        margin-bottom: 5px;
    }

    .fa-brands {
        margin-left: 45px;
        margin-right: 25px;
    }

    .top-part {
        display: flex;
        justify-content: center;
        align-items: center;
        text-align: center;
    }
} */

